Atualizações: destaque com link, notícias dinâmicas

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.7
+  url_launcher: ^6.2.1
 
   # Dependências adicionais se precisar
   cupertino_icons: ^1.0.2
@@ -29,3 +31,4 @@ flutter:
     - assets/images/noticias1.jpg
     - assets/images/noticias2.jpg
     - assets/images/noticias3.jpg
+    - assets/images/logo.svg
