--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- Permissão de localização -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Este app usa sua localização para mostrar os restaurantes populares mais próximos.</string>
+
+	<!-- Permissão de notificação -->
+	<key>NSUserNotificationUsageDescription</key>
+	<string>Este app quer enviar notificações para avisar sobre restaurantes e atualizações.</string>
 </dict>
 </plist>
