--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,14 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.7
   url_launcher: ^6.2.1
-  google_maps_flutter: ^2.5.0
-  geolocator: ^10.1.0
+  google_maps_flutter: ^2.6.0
+  geolocator: ^11.0.0
   geocoding: ^2.2.0
+  permission_handler: ^11.3.0
   http: ^1.1.0
-
-
-  # Dependências adicionais se precisar
   cupertino_icons: ^1.0.2
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
