Mensagem clara explicando o que foi alterado

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   video_player: ^2.8.2
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
