--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   latlong2: ^0.9.0
   video_player: ^2.8.2
   smooth_page_indicator: ^1.1.0
-  flutter_local_notifications: 15.1.1
+  flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
 
 dev_dependencies:
