Corrige Podfile e adiciona suporte a build iOS no Codemagic

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,23 +1,10 @@
 platform :ios, '14.0'
 
-# Descomente se quiser usar modular headers (pode ajudar com conflitos de dependências)
-# use_modular_headers!
+ENV['FLUTTER_APPLICATION_PATH'] ||= File.expand_path('..', __dir__)
+ENV['FLUTTER_ROOT'] ||= `which flutter`.strip.split("/bin").first
 
-# Atribui o caminho do projeto Flutter
-ENV['FLUTTER_ROOT'] ||= File.expand_path('~/flutter')
-ENV['FLUTTER_APPLICATION_PATH'] ||= File.expand_path('..')
-ENV['FLUTTER_TARGET'] ||= 'lib/main.dart'
-
-# Carrega o script gerado pelo Flutter
 load File.join(ENV['FLUTTER_ROOT'], 'packages', 'flutter_tools', 'bin', 'podhelper.rb')
 
 target 'Runner' do
-  use_frameworks!
-  use_modular_headers!
-
-  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-
-  target 'RunnerTests' do
-    inherit! :search_paths
-  end
+  install_all_flutter_pods(ENV['FLUTTER_APPLICATION_PATH'])
 end
