--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,8 @@
+require File.expand_path(File.join('..', '.dart_tool', 'flutter_build', 'podhelper.rb'), __FILE__)
+
 platform :ios, '14.0'
-
-ENV['FLUTTER_APPLICATION_PATH'] ||= File.expand_path('..', __dir__)
-ENV['FLUTTER_ROOT'] ||= `which flutter`.strip.split("/bin").first
-
-load File.join(ENV['FLUTTER_ROOT'], 'packages', 'flutter_tools', 'bin', 'podhelper.rb')
+use_modular_headers!
 
 target 'Runner' do
-  install_all_flutter_pods(ENV['FLUTTER_APPLICATION_PATH'])
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
