--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,22 @@
-require File.expand_path(File.join('..', '.dart_tool', 'flutter_build', 'podhelper.rb'), __FILE__)
-
 platform :ios, '14.0'
+
+use_frameworks!
 use_modular_headers!
 
 target 'Runner' do
-  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  flutter_install_ios_engine_pod
+  flutter_install_flutter_plugins File.dirname(File.realpath(__FILE__))
+end
+
+def flutter_install_ios_engine_pod
+  engine_dir = File.join(__dir__, '..', 'Flutter')
+  pod 'Flutter', :path => File.join(engine_dir, 'engine')
+end
+
+def flutter_install_flutter_plugins(app_dir)
+  plugin_pods = File.read(File.join(app_dir, '.flutter-plugins-dependencies'))
+  plugins = JSON.parse(plugin_pods)["plugins"]["ios"]
+  plugins.each do |plugin|
+    pod plugin["name"], :path => plugin["path"]
+  end
 end
