--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,22 +3,22 @@ platform :ios, '14.0'
 use_frameworks!
 use_modular_headers!
 
-# Primeiro: define as funções
-def flutter_install_ios_engine_pod
-  engine_dir = File.join(__dir__, '..', 'Flutter')
-  pod 'Flutter', :path => File.join(engine_dir, 'engine')
-end
-
-def flutter_install_flutter_plugins(app_dir)
-  plugin_pods = File.read(File.join(app_dir, '.flutter-plugins-dependencies'))
-  plugins = JSON.parse(plugin_pods)["plugins"]["ios"]
-  plugins.each do |plugin|
-    pod plugin["name"], :path => plugin["path"]
-  end
-end
-
-# Depois: usa as funções
 target 'Runner' do
-  flutter_install_ios_engine_pod
-  flutter_install_flutter_plugins File.dirname(File.realpath(__FILE__))
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+end
+
+# Função que carrega os plugins do Flutter de forma segura
+def flutter_install_all_ios_pods(app_dir)
+  plugin_deps_path = File.join(app_dir, '.flutter-plugins-dependencies')
+
+  if File.exist?(plugin_deps_path)
+    plugin_pods = File.read(plugin_deps_path)
+    plugins = JSON.parse(plugin_pods)["plugins"]["ios"]
+    plugins.each do |plugin|
+      pod plugin["name"], :path => plugin["path"]
+    end
+  else
+    # fallback seguro se o arquivo ainda não foi gerado
+    pod 'Flutter', :path => '../Flutter'
+  end
 end
