--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,13 +1,8 @@
 platform :ios, '14.0'
 
-require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), Dir.pwd)
+flutter_root = File.expand_path(File.join('..', 'flutter'))
+load File.join(flutter_root, 'packages', 'flutter_tools', 'bin', 'podhelper.rb')
 
 target 'Runner' do
   flutter_install_all_ios_pods(File.dirname(File.realpath(__FILE__)))
-end
-
-post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
-  end
 end
