--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   geolocator: ^11.0.0
   geocoding: ^2.2.0
   permission_handler: ^11.3.0
-  http: ^1.1.0
+  http: ^1.2.1
+  firebase_core: ^2.30.0
+  firebase_messaging: ^14.7.10
   cupertino_icons: ^1.0.2
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
