--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
   change_app_package_name: ^1.5.0
+  connectivity_plus: ^6.1.0
+  internet_connection_checker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
