--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: restaurante_popular
 description: Aplicativo do Restaurante Popular Maranhão
 publish_to: 'none' 
 
-version: 1.0.0+1
+version: 1.0.1+3
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
-  url_launcher: ^6.2.1
   google_maps_flutter: ^2.6.0
   geolocator: ^11.0.0
   geocoding: ^2.2.0
@@ -29,12 +28,18 @@ dependencies:
   change_app_package_name: ^1.5.0
   connectivity_plus: ^6.1.0
   internet_connection_checker: ^1.0.0
+  flutter_launcher_icons: ^0.14.4
+  lottie: ^3.1.0
+  url_launcher: ^6.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
-  flutter_launcher_icons: ^0.13.1
+  build_runner: ^2.4.10
+  hive_generator: ^2.0.1
 
 flutter_icons:
   android: true
