--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
+  flutter_html: ^3.0.0
   google_maps_flutter: ^2.6.0
   geolocator: ^11.0.0
   geocoding: ^2.2.0
@@ -33,6 +34,7 @@ dependencies:
   url_launcher: ^6.3.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
